--- a/Bluetooth Beacons iOS/Base.lproj/Main.storyboard
+++ b/Bluetooth Beacons iOS/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2659" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="N5m-09-zkd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="N5m-09-zkd">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -31,38 +30,26 @@
                                         <rect key="frame" x="0.0" y="28" width="343" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wGv-8d-L88" id="yD8-z7-SKJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="99"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="99.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dr2-LW-b87">
                                                     <rect key="frame" x="8" y="8" width="327" height="83"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="A0i-hM-6u3">
-                                                            <rect key="frame" x="0.0" y="0.0" width="83" height="83"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" secondItem="A0i-hM-6u3" secondAttribute="height" multiplier="1:1" id="O0a-2v-t8v"/>
-                                                            </constraints>
-                                                        </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rlm-b9-vOb">
-                                                            <rect key="frame" x="83" y="0.0" width="244" height="83"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="327" height="83"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstItem="rlm-b9-vOb" firstAttribute="leading" secondItem="A0i-hM-6u3" secondAttribute="trailing" id="2af-fb-uQy"/>
                                                         <constraint firstAttribute="bottom" secondItem="rlm-b9-vOb" secondAttribute="bottom" id="Dxx-5l-OKk"/>
                                                         <constraint firstAttribute="trailing" secondItem="rlm-b9-vOb" secondAttribute="trailing" id="FbS-1H-8ia"/>
-                                                        <constraint firstItem="A0i-hM-6u3" firstAttribute="leading" secondItem="Dr2-LW-b87" secondAttribute="leading" id="L7Q-DS-Pns"/>
                                                         <constraint firstItem="rlm-b9-vOb" firstAttribute="top" secondItem="Dr2-LW-b87" secondAttribute="top" id="Qzn-Qg-U2Y"/>
                                                         <constraint firstAttribute="bottom" secondItem="rlm-b9-vOb" secondAttribute="bottom" id="RQ0-Qb-4u2"/>
-                                                        <constraint firstAttribute="bottom" secondItem="A0i-hM-6u3" secondAttribute="bottom" id="SJc-48-UBV"/>
-                                                        <constraint firstItem="A0i-hM-6u3" firstAttribute="top" secondItem="Dr2-LW-b87" secondAttribute="top" id="UQG-XP-kP4"/>
-                                                        <constraint firstItem="rlm-b9-vOb" firstAttribute="leading" secondItem="A0i-hM-6u3" secondAttribute="trailing" id="VNV-fs-Kvq"/>
                                                         <constraint firstAttribute="trailing" secondItem="rlm-b9-vOb" secondAttribute="trailing" id="Zyv-74-p9k"/>
                                                         <constraint firstItem="rlm-b9-vOb" firstAttribute="top" secondItem="Dr2-LW-b87" secondAttribute="top" id="jB3-Hf-eeX"/>
-                                                        <constraint firstItem="rlm-b9-vOb" firstAttribute="leading" secondItem="A0i-hM-6u3" secondAttribute="trailing" id="xrV-cb-UeF"/>
                                                     </constraints>
                                                 </stackView>
                                             </subviews>
@@ -74,7 +61,6 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="ProtoImage" destination="A0i-hM-6u3" id="rwu-oV-wcV"/>
                                             <outlet property="ProtoLabel" destination="rlm-b9-vOb" id="PLH-ai-DsJ"/>
                                         </connections>
                                     </tableViewCell>
